--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1891,7 +1891,7 @@
                         <p><span class="numbers">3.<strong> Range: </strong>Specify the range of cells to be read. If this value is not specified, the whole spreadsheet is read. Only String variables and strings are supported to mention that range (Example: B5: G15).</p>
                         <p><span class="numbers">4.<strong> Include Headers:</strong> If the Include Headers checkbox is checked, the headers' data will also be included in the result.</p>
                         <p><span class="numbers">5.<strong> Text Format:</strong> If the Text Format checkbox is checked, the results will be displayed in the row format.</p>
-                        <p><strong>Note:<strong> Do not check the Text format checkbox in case if writing the range data into another Excel sheet.</p>
+                        <p><strong>Note:</strong> Do not check the Text format checkbox in case if writing the range data into another Excel sheet.</p>
                         <p><span class="numbers">6.<strong> Values:</strong> In case there are any formulas in the retrieving data, check the Values checkbox to retrieve the data and not the formulas.</p>
                         <p><span class="numbers">7.<strong> Select variable: </strong> Create the variable as DataTable. It stores the information from the specified spreadsheet range values in a variable. Only DataTable variables are supported.</p>
                       </div>
