--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -633,6 +633,7 @@
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Clipboard"><span class="numbers"></span> <span style="margin-left:15px;">Clipboard</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#GetSecret"><span class="numbers"></span> <span style="margin-left:15px;">Get Secret</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#GetCredentials"><span class="numbers"></span> <span style="margin-left:15px;">Get Credentials</span></a></li>
+                                                        <li style="margin-left:20px;"><a class="child 2" href="#GetParameters"><span class="numbers"></span> <span style="margin-left:15px;">Get Parameters</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Read2"><span class="numbers"></span> <span style="margin-left:15px;">Read</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Wait"><span class="numbers"></span> <span style="margin-left:15px;">Wait</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#HTTPAPI"><span class="numbers"></span> <span style="margin-left:25px;">HTTP API</span></a></li>
@@ -714,12 +715,12 @@
                                                       <li style="margin-left:20px;"><a class="child 2" href="#PutFile"><span class="numbers"></span> <span style="margin-left:35px;">Put File</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#GetFiles"><span class="numbers"></span> <span style="margin-left:35px;">Get Files</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#PutFiles"><span class="numbers"></span> <span style="margin-left:35px;">Put Files</span></a></li>
-                                                      <li style="margin-left:20px;"><a class="child 2" href="#CreateNewFolder"><span class="numbers"></span> <span style="margin-left:35px;">Create New Folder</span></a></li>
-                                                      <li style="margin-left:20px;"><a class="child 2" href="#DeleteFolder"><span class="numbers"></span> <span style="margin-left:35px;">Delete Folder</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#Delete"><span class="numbers"></span> <span style="margin-left:35px;">Delete</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#DeleteFiles"><span class="numbers"></span> <span style="margin-left:35px;">Delete Files</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFile"><span class="numbers"></span> <span style="margin-left:35px;">Move Remote File</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#MoveRemoteFiles"><span class="numbers"></span> <span style="margin-left:35px;">Move Remote Files</span></a></li>
+                                                      <li style="margin-left:20px;"><a class="child 2" href="#CreateNewFolder"><span class="numbers"></span> <span style="margin-left:35px;">Create New Folder</span></a></li>
+                                                      <li style="margin-left:20px;"><a class="child 2" href="#DeleteFolder"><span class="numbers"></span> <span style="margin-left:35px;">Delete Folder</span></a></li>
                                                       </ul>
                                                      </li>
 
@@ -1632,6 +1633,13 @@
                         </ol>
                         </div>
 
+                        <div id="GetParameters"  class="page-section">
+                          <h5 class="purple"> Get Parameters</h5>
+                          <P>Gets Parameters from the encoded string, decodes the data, and stores it into the specified variable.</p>
+                          <h5>Properties</h5>
+                          <p><span class="numbers">1.</span><strong> Variable to capture Decoded Variable:</strong> Pass the variable created to store the parameter’s data.</p>
+                        </div>
+
 
                         <div id="Read2"  class="page-section">
                           <h5 class="purple"> Read</h5>
@@ -2165,22 +2173,6 @@
 
               </div>
 
-              <div id="CreateNewFolder"  class="page-section">
-                <h5 class="purple"> Create New Folder  </h5>
-                <p>This action is used to create a new folder in the remote machine.</p>
-                <h6>Properties</h6>
-                <p><span class="numbers"><strong> Remote Folder Path: </strong>Enter the folder path in the remote machine where the new folder is to be created.</p>
-                <p><span class="numbers"><strong> Overwrite: </strong>Overwrites the file while moving/copying a file if there is a file existing with the same name at the destination.</p>
-                <p><span class="numbers"><strong> Skip: </strong>Skips the copying/moving of the file specified if there is a file existing with the same name at the destination.</p>
-              </div>
-
-              <div id="DeleteFolder"  class="page-section">
-                <h5 class="purple"> Delete Folder  </h5>
-                <p>Enter the path of the folder, which needs to be deleted in the remote machine.</p>
-                <h6>Properties</h6>
-                <p><span class="numbers"><strong> Remote Folder Path: </strong>Enter the path of the folder, which needs to be deleted in the remote machine.</p>
-              </div>
-
               <div id="Delete"  class="page-section">
                 <h5 class="purple"> Delete</h5>
                 <p>The User can delete a file in a specified path or folder.</p>
@@ -2209,6 +2201,22 @@
                 <h6>Properties</h6>
                 <p><span class="numbers">1.</span><strong> Remote source: </strong>Give the server folder path, which is the source path.</p>
                 <p><span class="numbers">2.</span><strong> Remote Destination: </strong>Give the destination path.</p>
+              </div>
+
+              <div id="CreateNewFolder"  class="page-section">
+                <h5 class="purple"> Create New Folder  </h5>
+                <p>This action is used to create a new folder in the remote machine.</p>
+                <h6>Properties</h6>
+                <p><span class="numbers"><strong> Remote Folder Path: </strong>Enter the folder path in the remote machine where the new folder is to be created.</p>
+                <p><span class="numbers"><strong> Overwrite: </strong>Overwrites the file while moving/copying a file if there is a file existing with the same name at the destination.</p>
+                <p><span class="numbers"><strong> Skip: </strong>Skips the copying/moving of the file specified if there is a file existing with the same name at the destination.</p>
+              </div>
+
+              <div id="DeleteFolder"  class="page-section">
+                <h5 class="purple"> Delete Folder  </h5>
+                <p>Enter the path of the folder, which needs to be deleted in the remote machine.</p>
+                <h6>Properties</h6>
+                <p><span class="numbers"><strong> Remote Folder Path: </strong>Enter the path of the folder, which needs to be deleted in the remote machine.</p>
               </div>
 
               <div id="CSVActions"  class="page-section">
@@ -2418,7 +2426,7 @@
                             <p><span class="numbers"><strong>Outlook:</strong> Select to download the attachments from the Outlook account.</p>
                             <p><span class="numbers"><strong>IMAP/POP3: </strong>Select to download the attachments from other email providers.</p>
                             <p><span class="numbers"><strong>File Path:  </strong>The corresponding folder path to save the attachment.</p>
-                             <p><span class="numbers"><strong>Content to Write: </strong>It is a Variable, which is used to get an attachment from an email.</p>
+                             <p><span class="numbers"><strong>Mail object: </strong>It is a Variable, which is used to get an attachment from an email.</p>
                             <p><span class="numbers"><strong>Note: </strong>If there is no attachment in an email, it will ignore automatically.</p>
                           </div>
 
@@ -2480,6 +2488,8 @@
                                <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button. You can see Dashboard, Action flows, E-Worker Machines, Queues, Schedules, and Secret Vault on the left menu.</p>
+                               <img src="{{ '/assets/images/doc-img127.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: DashboardTab </strong></p>
                                <p>3. The Dashboard shows the complete information of your e-manager console account.</p>
                                <p>4. The action flows tab shows the list of action flows published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img119.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
@@ -2502,15 +2512,17 @@
                              <h4 class="skyBlue"> Dashboard</h4>
                              <p>1. 1.	The dashboard provides the complete information of the e-manager console account on a single page.</p>
                              <img src="{{ '/assets/images/doc-img127.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Dashboard1 </strong></p>
+                             <p style="text-align:center;"><strong>Figure: DashboardTab </strong></p>
                              <p>2. Count of published action flows, count of added assets, count of flows waiting in the queues for execution, count of scheduled flows.</p>
+                             <img src="{{ '/assets/images/doc-img128.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Dashbord2 </strong></p>
                              <p>3. E-Worker Machine’s name and its runtime status.</p>
                              <p>4. Details of instances like total count of executed tasks and individual count of the completed tasks, stopped tasks, and faulted tasks.</p>
                              <p>5. Count of the hours saved and count of the automated instances.</p>
-                             <img src="{{ '/assets/images/doc-img128.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Dashbord2 </strong></p>
-                             <p>6. 6.	Details of the top 5 action flows like name of the flow, instances count of each flow, bot ID of each flow, information like date and time of the flow published at, hours saved by automating each flow, and email ID of the flow published account.</p>
                              <img src="{{ '/assets/images/doc-img129.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Dashbord3 </strong></p>
+                             <p>6. Details of the top 5 action flows like name of the flow, instances count of each flow, bot ID of each flow, information like date and time of the flow published at, hours saved by automating each flow, and email ID of the flow published account.</p>
+                             <img src="{{ '/assets/images/doc-img130.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Dashbord3 </strong></p>
                           </div>
 
