--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -689,6 +689,10 @@
                                                       <li style="margin-left:20px;"><a class="child 2" href="#FilterColumn"><span class="numbers"></span> <span style="margin-left:40px;">Filter Column</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#Convert"><span class="numbers"></span> <span style="margin-left:40px;">Convert to XLSX</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#InsertColumn"><span class="numbers"></span> <span style="margin-left:40px;">Insert Column</span></a></li>
+                                                      <li style="margin-left:20px;"><a class="child 2" href="#CreateExcel"><span class="numbers"></span> <span style="margin-left:40px;">Create Excel</span></a></li>
+                                                      <li style="margin-left:20px;"><a class="child 2" href="#CreatePivotTable"><span class="numbers"></span> <span style="margin-left:40px;">Create Pivot Table</span></a></li>
+                                                      <li style="margin-left:20px;"><a class="child 2" href="#RefreshExcelFile"><span class="numbers"></span> <span style="margin-left:40px;">Refresh Excel File</span></a></li>
+
                                                       </ul>
                                                       </li>
 
@@ -1996,6 +2000,36 @@
                         <p><span class="numbers">4.<strong> Positions: </strong>The position from where the column that is to be inserted, the number should be given.</p>
                       </div>
 
+                      <div id="CreateExcel"  class="page-section">
+                        <h5 class="purple"> Create Excel</h5>
+                        <p>This action is used to create an Excel file in the specified folder with the specified name and extension.</p>
+                        <h6>Properties</h6>
+                        <p><span class="numbers">1.<strong> FullPath:</strong> Enter the path of the folder where the new file is to be created.</p>
+                        <p><span class="numbers">2.<strong> FileName:</strong> Enter the name and extension for the file to be created.</p>
+                     </div>
+
+                     <div id="CreatePivotTable"  class="page-section">
+                       <h5 class="purple"> Create Pivot Table</h5>
+                       <p>This action is used to create a pivot table for the specified Excel sheet with defined columns, rows, and values.</p>
+                       <h6>Properties</h6>
+                       <p><span class="numbers">1.<strong> Enter FullPath:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Get Range action directly. If you drag it into the open spreadsheet activity, it will not ask the path, and hence, no need to mention the path.</p>
+                       <p><span class="numbers">2.<strong> Enter Sheet Name:</strong> Enter the name of the sheet containing the Cell that needs to be read. Only String variables and Strings are supported (Example: Sheet1).</p>
+                       <p><span class="numbers">3.<strong> Table Range:</strong> Specify the range of data to be added to the pivot table.(Example: R1C1: R5C3, where R is for row and C is for Column).</p>
+                       <p><span class="numbers">4.<strong> Sheet Title:</strong> Specify the sheet name into which the created pivot table data is to be added.</p>
+                       <p><span class="numbers">5.<strong> Add/ Remove: </strong> To add or remove the new fields.</p>
+                       <p><span class="numbers">6.<strong> Header Names:</strong> Specify the header name of the columns.</p>
+                       <p><span class="numbers">7.<strong> Header Area:</strong> Specify the Header area to be added in the created pivot table as Row, Column, or Values.</p>
+                       <p><span class="numbers">8.<strong> Function:</strong> Once the value option is selected in the Header area, the functions available will be visible.</p>
+                    </div>
+
+                    <div id="RefreshExcelFile"  class="page-section">
+                      <h5 class="purple"> This action is used to refresh the Excel file.</h5>
+                      <p>This action is used to create an Excel file in the specified folder with the specified name and extension.</p>
+                      <h6>Properties</h6>
+                      <p><span class="numbers">1.<strong> FullPath:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Get Range action directly. If you drag it into the open spreadsheet activity, it will not ask the path, and hence no need to mention the path.</p>
+                       <p><strong>Note</strong>When inserting a single quote data into Excel, Replace the single quote ' with \’.</p>
+                   </div>
+
                       <div id="Loops"  class="page-section">
                         <h5 class="purple"> Loops</h5>
                         <h6>For</h6>
@@ -2435,6 +2469,7 @@
                        <p>To automate the process of database actions related to My SQL, PostgreSQL, Oracle, and MS SQL.</p>
                        <p><strong>Properties</strong></p>
                        <p><span class="numbers"><strong>Select Database Type:</strong> Select either MySQL or PostgreSQL or Oracle or MS SQL based on the database type the user needs to work with.</p>
+                       <p><strong>Note</strong>When inserting a single quote data into Excel, Replace the single quote ' with \’.</p>
                      </div>
 
                        <div id="Connection"  class="page-section">
@@ -2489,7 +2524,7 @@
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button. You can see Dashboard, Action flows, E-Worker Machines, Queues, Schedules, and Secret Vault on the left menu.</p>
                                <img src="{{ '/assets/images/doc-img127.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: DashboardTab </strong></p>
+                               <p style="text-align:center;"><strong>Figure: Dashboard Tab </strong></p>
                                <p>3. The Dashboard shows the complete information of your e-manager console account.</p>
                                <p>4. The action flows tab shows the list of action flows published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img119.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
@@ -2512,18 +2547,18 @@
                              <h4 class="skyBlue"> Dashboard</h4>
                              <p>1. 1.	The dashboard provides the complete information of the e-manager console account on a single page.</p>
                              <img src="{{ '/assets/images/doc-img127.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: DashboardTab </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Dashboard Tab </strong></p>
                              <p>2. Count of published action flows, count of added assets, count of flows waiting in the queues for execution, count of scheduled flows.</p>
                              <img src="{{ '/assets/images/doc-img128.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Dashbord2 </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Dashbord Details </strong></p>
                              <p>3. E-Worker Machine’s name and its runtime status.</p>
                              <p>4. Details of instances like total count of executed tasks and individual count of the completed tasks, stopped tasks, and faulted tasks.</p>
                              <p>5. Count of the hours saved and count of the automated instances.</p>
                              <img src="{{ '/assets/images/doc-img129.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Dashbord3 </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Dashbord Details </strong></p>
                              <p>6. Details of the top 5 action flows like name of the flow, instances count of each flow, bot ID of each flow, information like date and time of the flow published at, hours saved by automating each flow, and email ID of the flow published account.</p>
                              <img src="{{ '/assets/images/doc-img130.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Dashbord3 </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Dashbord Details </strong></p>
                           </div>
 
                            <div id="ProcessManagement"  class="page-section">
